--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -8,12 +8,20 @@
 .icon-bi-bookmark-plus-after {@include icon-bi($bi-bookmark-plus,true);}
 .icon-bi-bookmarks-fill {@include icon-bi($bi-bookmarks-fill);}
 .icon-bi-bookmarks-fill-after {@include icon-bi($bi-bookmarks-fill,true);}
+.icon-bi-caret-left {@include icon-bi($bi-caret-left);}
+.icon-bi-caret-left-after {@include icon-bi($bi-caret-left,true);}
+.icon-bi-caret-right {@include icon-bi($bi-caret-right);}
+.icon-bi-caret-right-after {@include icon-bi($bi-caret-right,true);}
 .icon-bi-funnel {@include icon-bi($bi-funnel);}
 .icon-bi-funnel-after {@include icon-bi($bi-funnel,true);}
 .icon-bi-funnel-fill {@include icon-bi($bi-funnel-fill);}
 .icon-bi-funnel-fill-after {@include icon-bi($bi-funnel-fill,true);}
 .icon-bi-info-circle {@include icon-bi($bi-info-circle);}
 .icon-bi-info-circle-after {@include icon-bi($bi-info-circle,true);}
+.icon-bi-plus-circle {@include icon-bi($bi-plus-circle);}
+.icon-bi-plus-circle-after {@include icon-bi($bi-plus-circle,true);}
+.icon-bi-printer {@include icon-bi($bi-printer);}
+.icon-bi-printer-after {@include icon-bi($bi-printer,true);}
 .icon-bi-save {@include icon-bi($bi-save);}
 .icon-bi-save-after {@include icon-bi($bi-save,true);}
 .icon-bi-search {@include icon-bi($bi-search);}
