remove toc elements from print styles

--- a/scss/print.scss
+++ b/scss/print.scss
@@ -30,11 +30,15 @@ main {
   .bcbb-search-api-form,
   .bcbb-search-sidebar,
   .block-bc-dc-workflow-block,
+  .block-book-navigation,
   .block-webform,
   .btn,
+  .node__links,
   .openid-connect-login-form,
   .page-title::after,
   .region-breadcrumb,
+  .toc,
+  .toc-responsive,
   button,
   footer,
   header,
