--- a/css/print.css
+++ b/css/print.css
@@ -19,11 +19,15 @@
   .bcbb-search-api-form,
   .bcbb-search-sidebar,
   .block-bc-dc-workflow-block,
+  .block-book-navigation,
   .block-webform,
   .btn,
+  .node__links,
   .openid-connect-login-form,
   .page-title::after,
   .region-breadcrumb,
+  .toc,
+  .toc-responsive,
   button,
   footer,
   header,
