--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,8 @@
   './components/collapse',
   './components/nav_book',
   './components/buttons_links',
-  './components/containers'
+  './components/containers',
+  './components/header'
   ;
 
 // #################################
