--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@
 // primary B.C. brand
 $colorBrand-primary: #003366;
 $colorBrand-secondary: #fcba19;
-$colorBrand-secondary-a11y: #CA8800;
+$colorBrand-secondary-a11y: #a36b00;
 
 // B.C. brand variants
 
