--- a/templates/navigation/menu-local-tasks.html.twig
+++ b/templates/navigation/menu-local-tasks.html.twig
@@ -3,6 +3,11 @@
  * @file
  * Theme override to display primary and secondary local tasks.
  *
+ * This version uses @aria-label instead of hidden headers.
+ *
+ * This file is needed until resolution of:
+ * https://www.drupal.org/project/bootstrap5/issues/3427194
+ *
  * Available variables:
  * - primary: HTML list items representing primary tasks.
  * - secondary: HTML list items representing secondary tasks.
@@ -12,14 +17,12 @@
  */
 #}
 {% if primary %}
-  <h2 class="visually-hidden">{{ 'Primary tabs'|t }}</h2>
-  <nav class="tabs-wrapper tabs-primary is-collapsible" aria-labelledby="primary-tabs-title" data-drupal-nav-tabs>
+  <nav class="tabs-wrapper tabs-primary is-collapsible" aria-label="{{ 'Primary tabs'|t }}" data-drupal-nav-tabs>
     <ul class="nav nav-tabs flex-column flex-md-row primary clearfix" data-drupal-nav-tabs-target>{{ primary }}</ul>
   </nav>
 {% endif %}
 {% if secondary %}
-  <h2 id="secondary-tabs-title" class="visually-hidden">{{ 'Secondary tabs'|t }}</h2>
-  <nav class="tabs-wrapper tabs-secondary" aria-labelledby="secondary-tabs-title" data-drupal-nav-tabs>
+  <nav class="tabs-wrapper tabs-secondary" aria-label="{{ 'Secondary tabs'|t }}" data-drupal-nav-tabs>
     <ul class="nav nav-tabs flex-column flex-md-row primary clearfix" data-drupal-nav-tabs-target>{{ secondary }}</ul>
   </nav>
 {% endif %}
