--- a/templates/blocks/block--system-branding-block.html.twig
+++ b/templates/blocks/block--system-branding-block.html.twig
@@ -14,20 +14,15 @@
  */
 #}
 {% block content %}
-<div class="navbar-brand d-lg-flex align-items-center">
-
+<a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="navbar-brand d-lg-flex align-items-center bb-link-light">
   {% if site_logo %}
-  <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="site-logo d-block">
-    <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" />
-  </a>
+  <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" class="site-logo d-block" />
   {% endif %}
 
-  <div class="ps-lg-4">
+  <div class="site-title ps-lg-4">
     {% if site_name %}
-    <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="site-title">
       {{ site_name }}
-    </a>
     {% endif %}
   </div>
-</div>
+</a>
 {% endblock %}
