--- a/templates/navigation/pager.html.twig
+++ b/templates/navigation/pager.html.twig
@@ -3,6 +3,11 @@
  * @file
  * Theme override to display a pager.
  *
+ * This version uses @aria-label instead of hidden headers.
+ *
+ * This file is needed until resolution of:
+ * https://www.drupal.org/project/bootstrap5/issues/3427371
+ *
  * Available variables:
  * - heading_id: Pagination heading ID.
  * - items: List of pager items.
@@ -31,8 +36,7 @@
  */
 #}
 {% if items %}
-  <nav class="pager"  role="navigation" aria-labelledby="{{ heading_id }}" aria-label="{{ 'Pagination'|t }}">
-    <h4 id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</h4>
+  <nav class="pager" role="navigation" aria-label="{{ 'Pagination'|t }}">
     <ul class="pagination js-pager__items">
       {# Print first item if we are not on the first page. #}
       {% if items.first %}
