--- a/templates/blocks/block--system-branding-block.html.twig
+++ b/templates/blocks/block--system-branding-block.html.twig
@@ -22,12 +22,9 @@
   {% if site_logo %}
   <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" class="site-logo d-block" />
   {% endif %}
-
-  <div class="site-title ps-lg-4">
-    {% if site_name %}
-      {{ site_name }}
-    {% endif %}
-  </div>
+  {% if site_name %}
+  <div class="site-title ps-lg-4">{{ site_name }}</div>
+  {% endif %}
 </a>
 {% if is_front %}
   </h1>
