--- a/templates/content/media.html.twig
+++ b/templates/content/media.html.twig
@@ -3,6 +3,11 @@
  * @file
  * Theme override to display a media item.
  *
+ * This version wraps the content in `div` instead of `article`.
+ *
+ * This file is needed until resolution of:
+ * https://www.drupal.org/project/bootstrap5/issues/3427715
+ *
  * Available variables:
  * - name: Name of the media.
  * - content: Media content.
@@ -20,9 +25,9 @@
     view_mode ? 'media--view-mode-' ~ view_mode|clean_class,
   ]
 %}
-<article{{ attributes.addClass(classes) }}>
+<div{{ attributes.addClass(classes) }}>
   {{ title_suffix.contextual_links }}
   {% if content %}
     {{ content }}
   {% endif %}
-</article>
+</div>
